@@ -1,286 +1,438 @@
-# What is ReportServer Community ?
+# Bitnami Docker Image for ReportServer Community
+
+## What is ReportServer Community?
 
 > ReportServer is an open source business intelligence (OSBI) platform with powerful reporting and analysis tools. It provides a unified interface to reporting engines from different providers, making it easy for managers to collate, analyze and take action on data from multiple business touchpoints. With support for Jasper, Birt, Mondrian and Excel as well as a powerful ad-hoc reporting component ReportServer is the ideal tool for business decision makers, analysts and consultants.
 
 https://reportserver.net/en/#secondsection
 
-# TL;DR
-
-## Docker Compose
+## TL;DR
 
 ```console
-$ curl -sSL https://raw.githubusercontent.com/bitnami/bitnami-docker-reportserver-community/master/docker-compose.yml > docker-compose.yml
+$ curl -sSL https://raw.githubusercontent.com/bitnami/bitnami-docker-reportserver/master/docker-compose.yml > docker-compose.yml
 $ docker-compose up -d
 ```
 
-You can find the default credentials and available configuration options in the [Environment Variables](#environment-variables) section.
+**Warning**: This quick setup is only intended for development environments. You are encouraged to change the insecure default credentials and check out the available configuration options in the [Environment Variables](#environment-variables) section for a more secure deployment.
 
-# Why use Bitnami Images?
+## Why use Bitnami Images?
 
-* Bitnami closely tracks upstream source changes and promptly publishes new versions of this image using our automated systems.
-* With Bitnami images the latest bug fixes and features are available as soon as possible.
-* Bitnami containers, virtual machines and cloud images use the same components and configuration approach - making it easy to switch between formats based on your project needs.
-* All our images are based on [minideb](https://github.com/bitnami/minideb) a minimalist Debian based container image which gives you a small base container image and the familiarity of a leading Linux distribution.
-* All Bitnami images available in Docker Hub are signed with [Docker Content Trust (DCT)](https://docs.docker.com/engine/security/trust/content_trust/). You can use `DOCKER_CONTENT_TRUST=1` to verify the integrity of the images.
-* Bitnami container images are released daily with the latest distribution packages available.
+- Bitnami closely tracks upstream source changes and promptly publishes new versions of this image using our automated systems.
+- With Bitnami images the latest bug fixes and features are available as soon as possible.
+- Bitnami containers, virtual machines and cloud images use the same components and configuration approach - making it easy to switch between formats based on your project needs.
+- All our images are based on [minideb](https://github.com/bitnami/minideb) a minimalist Debian based container image which gives you a small base container image and the familiarity of a leading Linux distribution.
+- All Bitnami images available in Docker Hub are signed with [Docker Content Trust (DCT)](https://docs.docker.com/engine/security/trust/content_trust/). You can use `DOCKER_CONTENT_TRUST=1` to verify the integrity of the images.
+- Bitnami container images are released daily with the latest distribution packages available.
 
+> This [CVE scan report](https://quay.io/repository/bitnami/reportserver?tab=tags) contains a security report with all open CVEs. To get the list of actionable security issues, find the "latest" tag, click the vulnerability report link under the corresponding "Security scan" field and then select the "Only show fixable" filter on the next page.
 
-> This [CVE scan report](https://quay.io/repository/bitnami/reportserver-community?tab=tags) contains a security report with all open CVEs. To get the list of actionable security issues, find the "latest" tag, click the vulnerability report link under the corresponding "Security scan" field and then select the "Only show fixable" filter on the next page.
+## Why use a non-root container?
 
-# Supported tags and respective `Dockerfile` links
+Non-root container images add an extra layer of security and are generally recommended for production environments. However, because they run as a non-root user, privileged tasks are typically off-limits. Learn more about non-root containers [in our docs](https://docs.bitnami.com/tutorials/work-with-non-root-containers/).
+
+## Supported tags and respective `Dockerfile` links
 
 Learn more about the Bitnami tagging policy and the difference between rolling tags and immutable tags [in our documentation page](https://docs.bitnami.com/tutorials/understand-rolling-tags-containers/).
 
 
-* [`3`, `3-debian-10`, `3.7.0-6044`, `3.7.0-6044-debian-10-r51`, `latest` (3/debian-10/Dockerfile)](https://github.com/bitnami/bitnami-docker-reportserver-community/blob/3.7.0-6044-debian-10-r51/3/debian-10/Dockerfile)
+- [`3`, `3-debian-10`, `3.7.1-6046`, `3.7.1-6046-debian-10-r0`, `latest` (3/debian-10/Dockerfile)](https://github.com/bitnami/bitnami-docker-reportserver/blob/3.7.1-6046-debian-10-r0/3/debian-10/Dockerfile)
 
-Subscribe to project updates by watching the [bitnami/reportserver-community GitHub repo](https://github.com/bitnami/bitnami-docker-reportserver-community).
+Subscribe to project updates by watching the [bitnami/reportserver GitHub repo](https://github.com/bitnami/bitnami-docker-reportserver).
 
+## Get this image
 
-# Prerequisites
-
-To run this application you need Docker Engine 1.10.0. Docker Compose is recomended with a version 1.6.0 or later.
-
-# How to use this image
-
-## Run the application using Docker Compose
-
-The main folder of this repository contains a functional [`docker-compose.yml`](https://github.com/bitnami/bitnami-docker-reportserver-community/blob/master/docker-compose.yml) file. Run the application using it as shown below:
+The recommended way to get the Bitnami ReportServer Community Docker Image is to pull the prebuilt image from the [Docker Hub Registry](https://hub.docker.com/r/bitnami/reportserver).
 
 ```console
-$ curl -sSL https://raw.githubusercontent.com/bitnami/bitnami-docker-reportserver-community/master/docker-compose.yml > docker-compose.yml
+$ docker pull bitnami/reportserver:latest
+```
+
+To use a specific version, you can pull a versioned tag. You can view the [list of available versions](https://hub.docker.com/r/bitnami/reportserver/tags/) in the Docker Hub Registry.
+
+```console
+$ docker pull bitnami/reportserver:[TAG]
+```
+
+If you wish, you can also build the image yourself.
+
+```console
+$ docker build -t bitnami/reportserver:latest 'https://github.com/bitnami/bitnami-docker-reportserver.git#master:3/debian-10'
+```
+
+## How to use this image
+
+ReportServer Community requires access to a MySQL or MariaDB database to store information. We'll use the [Bitnami Docker Image for MariaDB](https://www.github.com/bitnami/bitnami-docker-mariadb) for the database requirements.
+
+### Run the application using Docker Compose
+
+The main folder of this repository contains a functional [`docker-compose.yml`](https://github.com/bitnami/bitnami-docker-reportserver/blob/master/docker-compose.yml) file. Run the application using it as shown below:
+
+```console
+$ curl -sSL https://raw.githubusercontent.com/bitnami/bitnami-docker-reportserver/master/docker-compose.yml > docker-compose.yml
 $ docker-compose up -d
 ```
 
-Then you can access your application at http://your-ip/. Enter bitnami default username and password `user/ bitnami`
+### Using the Docker Command Line
 
-## Run the application manually
+If you want to run the application manually instead of using `docker-compose`, these are the basic steps you need to run:
 
-If you want to run the application manually instead of using docker-compose, these are the basic steps you need to run:
+#### Step 1: Create a network
 
-1. Create a new network for the application:
+```console
+$ docker network create reportserver-network
+```
 
-  ```console
-  $ docker network create reportserver-tier
-  ```
+#### Step 2: Create a volume for MariaDB persistence and create a MariaDB container
 
-2. Create a volume for MariaDB persistence and create a MariaDB container
+```console
+$ docker volume create --name mariadb_data
+$ docker run -d --name mariadb \
+  --env ALLOW_EMPTY_PASSWORD=yes \
+  --env MARIADB_USER=bn_reportserver \
+  --env MARIADB_PASSWORD=bitnami \
+  --env MARIADB_DATABASE=bitnami_reportserver \
+  --network reportserver-network \
+  --volume mariadb_data:/bitnami/mariadb \
+  bitnami/mariadb:latest
+```
 
-  ```console
-  $ docker volume create --name mariadb_data
-  $ docker run -d --name mariadb \
-    -e ALLOW_EMPTY_PASSWORD=yes \
-    -e MARIADB_USER=bn_reportserver \
-    -e MARIADB_DATABASE=bitnami_reportserver \
-    --net reportserver-tier \
-    --volume mariadb_data:/bitnami \
-    bitnami/mariadb:latest
-  ```
+#### Step 3: Create volumes for ReportServer Community persistence and launch the container
 
-3. Launch the container
+```console
+$ docker volume create --name reportserver_data
+$ docker run -d --name reportserver \
+  -p 8080:8080 -p 8443:8443 \
+  --env ALLOW_EMPTY_PASSWORD=yes \
+  --env REPORTSERVER_DATABASE_USER=bn_reportserver \
+  --env REPORTSERVER_DATABASE_PASSWORD=bitnami \
+  --env REPORTSERVER_DATABASE_NAME=bitnami_reportserver \
+  --network reportserver-network \
+  --volume reportserver_data:/bitnami/reportserver \
+  bitnami/reportserver:latest
+```
 
-  ```console
-  $ docker volume create --name reportserver_data
-  $ docker run -d --name reportserver-community -p 80:8080 \
-    -e ALLOW_EMPTY_PASSWORD=yes \
-    -e REPORTSERVER_DATABASE_USER=bn_reportserver \
-    -e REPORTSERVER_DATABASE_NAME=bitnami_reportserver \
-    --net reporserver-tier \
-    bitnami/reportserver-community:latest
-  ```
-
-Then you can access your application at http://your-ip/. Enter bitnami default username and password:
-`user/ bitnami`
-
->**Note!** If you are using **Docker for Windows** (regardless of running the application using Docker compose or manually) you must check the Docker virtual machine IP executing this command:
-
-`docker-machine ip`
-
-This IP address allowing you to access to your application.
+Access your application at *http://your-ip/*
 
 ## Persisting your application
 
-If you remove the container all your data and configurations will be lost, and the next time you run the image the database will be reinitialized. To avoid this loss of data, you should mount a volume that will persist even after the container is removed.
+If you remove the container all your data will be lost, and the next time you run the image the database will be reinitialized. To avoid this loss of data, you should mount a volume that will persist even after the container is removed.
 
-You should mount a volume for [persistence of the MariaDB data](https://github.com/bitnami/bitnami-docker-mariadb#persisting-your-database).
+For persistence you should mount a directory at the `/bitnami/reportserver` path. If the mounted directory is empty, it will be initialized on the first run. Additionally you should [mount a volume for persistence of the MariaDB data](https://github.com/bitnami/bitnami-docker-mariadb#persisting-your-database).
 
-The above examples define docker volumes namely `mariadb_data`. The Reportserver Community state will persist as long as database is persisted.
+The above examples define the Docker volumes named `mariadb_data` and `reportserver_data`. The ReportServer Community application state will persist as long as volumes are not removed.
 
-To avoid inadvertent removal of these volumes you can [mount host directories as data volumes](https://docs.docker.com/engine/tutorials/dockervolumes/). Alternatively you can make use of volume plugins to host the volume data.
+To avoid inadvertent removal of volumes, you can [mount host directories as data volumes](https://docs.docker.com/engine/tutorials/dockervolumes/). Alternatively you can make use of volume plugins to host the volume data.
 
+### Mount host directories as data volumes with Docker Compose
 
-### Mount persistent folders manually
+This requires a minor change to the [`docker-compose.yml`](https://github.com/bitnami/bitnami-docker-reportserver/blob/master/docker-compose.yml) file present in this repository:
 
-In this case you need to specify the directories to mount on the run command. The process is the same than the one previously shown:
+```diff
+   mariadb:
+     ...
+     volumes:
+-      - 'mariadb_data:/bitnami/mariadb'
++      - /path/to/mariadb-persistence:/bitnami/mariadb
+   ...
+   reportserver:
+     ...
+     volumes:
+-      - 'reportserver_data:/bitnami/reportserver'
++      - /path/to/reportserver-persistence:/bitnami/reportserver
+   ...
+-volumes:
+-  mariadb_data:
+-    driver: local
+-  reportserver_data:
+-    driver: local
+```
 
-1. Create a network (if it does not exist):
+> NOTE: As this is a non-root container, the mounted files and directories must have the proper permissions for the UID `1001`.
 
-  ```console
-  $ docker network create reportserver-tier
-  ```
+### Mount host directories as data volumes using the Docker command line
 
-2. Create a MariaDB container with host volume:
+#### Step 1: Create a network (if it does not exist)
 
-  ```console
-  $ docker run -d --name mariadb \
-    -e ALLOW_EMPTY_PASSWORD=yes \
-    -e MARIADB_USER=bn_reportserver \
-    -e MARIADB_DATABASE=bitnami_reportserver \
-    --net reportserver-tier \
-    --volume /path/to/mariadb-persistence:/bitnami \
-   bitnami/mariadb:latest
-  ```
+```console
+$ docker network create reportserver-network
+```
 
-3. Create the Reportserver Community container:
+#### Step 2. Create a MariaDB container with host volume
 
-  ```console
-  $ docker run -d --name reportserver-community -p 80:8080 \
-    -e ALLOW_EMPTY_PASSWORD=yes \
-    -e REPORTSERVER_DATABASE_USER=bn_reportserver \
-    -e REPORTSERVER_DATABASE_NAME=bitnami_reportserver \
-    --net reportserver-tier \
-    bitnami/reportserver-community:latest
-  ```
+```console
+$ docker run -d --name mariadb \
+  --env ALLOW_EMPTY_PASSWORD=yes \
+  --env MARIADB_USER=bn_reportserver \
+  --env MARIADB_PASSWORD=bitnami \
+  --env MARIADB_DATABASE=bitnami_reportserver \
+  --network reportserver-network \
+  --volume /path/to/mariadb-persistence:/bitnami/mariadb \
+  bitnami/mariadb:latest
+```
 
-# Upgrade this application
+#### Step 3. Create the ReportServer Community container with host volumes
 
-Bitnami provides up-to-date versions of Reportserver Community, including security patches, soon after they are made upstream. We recommend that you follow these steps to upgrade your container. We will cover here the upgrade of the Reportserver Community container.
+```console
+$ docker run -d --name reportserver \
+  -p 8080:8080 -p 8443:8443 \
+  --env ALLOW_EMPTY_PASSWORD=yes \
+  --env REPORTSERVER_DATABASE_USER=bn_reportserver \
+  --env REPORTSERVER_DATABASE_PASSWORD=bitnami \
+  --env REPORTSERVER_DATABASE_NAME=bitnami_reportserver \
+  --network reportserver-network \
+  --volume /path/to/reportserver-persistence:/bitnami/reportserver \
+  bitnami/reportserver:latest
+```
 
-1. Get the updated images:
+## Configuration
 
-  ```console
-  $ docker pull bitnami/reportserver-community:latest
-  ```
+### Environment variables
 
-2. Stop your container
+When you start the ReportServer Community image, you can adjust the configuration of the instance by passing one or more environment variables either on the docker-compose file or on the `docker run` command line. If you want to add a new environment variable:
 
-  * For docker-compose: `$ docker-compose stop reportserver-community`
-  * For manual execution: `$ docker stop reportserver-community`
+- For docker-compose add the variable name and value under the application section in the [`docker-compose.yml`](https://github.com/bitnami/bitnami-docker-reportserver/blob/master/docker-compose.yml) file present in this repository:
 
-3. [snapshot the MariaDB data](https://github.com/bitnami/bitnami-docker-mariadb#step-2-stop-and-backup-the-currently-running-container)
+    ```yaml
+    reportserver:
+      ...
+      environment:
+        - REPORTSERVER_PASSWORD=my_password
+      ...
+    ```
 
-You can use these snapshots to restore the application state should the upgrade fail.
+- For manual execution add a `--env` option with each variable and value:
 
-4. Remove the currently running container
+    ```console
+    $ docker run -d --name reportserver -p 80:8080 -p 443:8443 \
+      --env REPORTSERVER_PASSWORD=my_password \
+      --network reportserver-tier \
+      --volume /path/to/reportserver-persistence:/bitnami \
+      bitnami/reportserver:latest
+    ```
 
-  * For docker-compose: `$ docker-compose rm -v reportserver-community`
-  * For manual execution: `$ docker rm -v reportserver-community`
-
-5. Run the new image
-
-  * For docker-compose: `$ docker-compose up reportserver-community`
-  * For manual execution ([mount](#mount-persistent-folders-manually) the directories if needed): `docker run --name reportserver bitnami/reportserver-community:latest`
-
-# Configuration
-
-## Environment variables
-
-When you start the reportserver-community image, you can adjust the configuration of the instance by passing one or more environment variables either on the docker-compose file or on the `docker run` command line.
+Available environment variables:
 
 ##### User and Site configuration
 
- - `REPORTSERVER_USERNAME`: Reportserver admin username. Default: **user**
- - `REPORTSERVER_PASSWORD`: Reportserver admin password. Default: **bitnami**
- - `REPORTSERVER_EMAIL`: Reportserver admin email. Default: **user@example.com**
+- `REPORTSERVER_USERNAME`: ReportServer Community application username. Default: **user**
+- `REPORTSERVER_PASSWORD`: ReportServer Community application password. Default: **bitnami**
+- `REPORTSERVER_EMAIL`: ReportServer Community application email. Default: **user@example.com**
+- `REPORTSERVER_FIRST_NAME`: ReportServer Community first name. Default: **FirstName**
+- `REPORTSERVER_LAST_NAME`: ReportServer Community last name. Default: **LastName**
 
-##### Use an existing database
+##### Database connection configuration
 
-- `MARIADB_HOST`: Hostname for MariaDB server. Default: **mariadb**
-- `MARIADB_PORT_NUMBER`: Port used by MariaDB server. Default: **3306**
-- `REPORTSERVER_DATABASE_NAME`: Database name that Reportserver will use to connect with the database. Default: **bitnami_reportserver**
-- `REPORTSERVER_DATABASE_USER`: Database user that Reportserver will use to connect with the database. Default: **bn_reportserver**
-- `REPORTSERVER_DATABASE_PASSWORD`: Database password that Reportserver will use to connect with the database. No defaults.
+- `REPORTSERVER_DATABASE_HOST`: Hostname for the MariaDB or MySQL server. Default: **mariadb**
+- `REPORTSERVER_DATABASE_PORT_NUMBER`: Port used by the MariaDB or MySQL server. Default: **3306**
+- `REPORTSERVER_DATABASE_NAME`: Database name that ReportServer Community will use to connect with the database. Default: **bitnami_reportserver**
+- `REPORTSERVER_DATABASE_USER`: Database user that ReportServer Community will use to connect with the database. Default: **bn_reportserver**
+- `REPORTSERVER_DATABASE_PASSWORD`: Database password that ReportServer Community will use to connect with the database. No default.
 - `ALLOW_EMPTY_PASSWORD`: It can be used to allow blank passwords. Default: **no**
 
-##### Create a database for Reportserver using mysql-client
+##### Create a database for ReportServer Community using mysql-client
 
-- `MARIADB_HOST`: Hostname for MariaDB server. Default: **mariadb**
-- `MARIADB_PORT_NUMBER`: Port used by MariaDB server. Default: **3306**
-- `MARIADB_ROOT_USER`: Database admin user. Default: **root**
-- `MARIADB_ROOT_PASSWORD`: Database password for the `MARIADB_ROOT_USER` user. No defaults.
-- `MYSQL_CLIENT_CREATE_DATABASE_NAME`: New database to be created by the mysql client module. No defaults.
-- `MYSQL_CLIENT_CREATE_DATABASE_USER`: New database user to be created by the mysql client module. No defaults.
-- `MYSQL_CLIENT_CREATE_DATABASE_PASSWORD`: Database password for the `MYSQL_CLIENT_CREATE_DATABASE_USER` user. No defaults.
+- `MYSQL_CLIENT_DATABASE_HOST`: Hostname for the MariaDB or MySQL server. Default: **mariadb**
+- `MYSQL_CLIENT_DATABASE_PORT_NUMBER`: Port used by the MariaDB or MySQL server. Default: **3306**
+- `MYSQL_CLIENT_DATABASE_ROOT_USER`: Database admin user. Default: **root**
+- `MYSQL_CLIENT_DATABASE_ROOT_PASSWORD`: Database password for the database admin user. No default.
+- `MYSQL_CLIENT_CREATE_DATABASE_NAME`: New database to be created by the mysql client module. No default.
+- `MYSQL_CLIENT_CREATE_DATABASE_USER`: New database user to be created by the mysql client module. No default.
+- `MYSQL_CLIENT_CREATE_DATABASE_PASSWORD`: Database password for the `MYSQL_CLIENT_CREATE_DATABASE_USER` user. No default.
+- `MYSQL_CLIENT_CREATE_DATABASE_CHARACTER_SET`: Character set to use for the new database. No default.
+- `MYSQL_CLIENT_CREATE_DATABASE_COLLATE`: Database collation to use for the new database. No default.
+- `MYSQL_CLIENT_ENABLE_SSL`: Whether to enable SSL connections for the new database. Default: **no**
+- `MYSQL_CLIENT_SSL_CA_FILE`: Path to the SSL CA file for the new database. No default.
 - `ALLOW_EMPTY_PASSWORD`: It can be used to allow blank passwords. Default: **no**
 
-##### Modify JAVA_OPTS for the application
+##### SMTP Configuration
 
-- `REPORTSERVER_JAVA_OPTS`: Java additional options. Default: `-Djava.awt.headless=true -Xmx4g -XX:+UseConcMarkSweepGC -XX:MaxPermSize=512M -Dfile.encoding=UTF8`
+To configure ReportServer Community to send email using SMTP you can set the following environment variables:
 
-If you want to add a new environment variable:
+- `REPORTSERVER_SMTP_HOST`: SMTP host.
+- `REPORTSERVER_SMTP_PORT`: SMTP port.
+- `REPORTSERVER_SMTP_USER`: SMTP account user.
+- `REPORTSERVER_SMTP_PASSWORD`: SMTP account password.
+- `REPORTSERVER_SMTP_PROTOCOL`: If specified, SMTP protocol to use. Allowed values: *tls*, *ssl*. No default.
 
- * For Docker Compose, add the variable name and value under the application section:
+#### Examples
 
-  ```yaml
-  reportserver-community:
-    environment:
-      - REPORTSERVER_PASSWORD=my_password
-  ```
+##### SMTP configuration using a Gmail account
 
- * For manual execution add a `-e` option with each variable and value:
+This would be an example of SMTP configuration using a Gmail account:
 
-  ```console
-  $ docker run -d -e REPORTSERVER_PASSWORD=my_password -p 80:8080 --name reportserver -v --network=reportserver-tier bitnami/reportserver-community
-  ```
-### Install demo data
+- Modify the [`docker-compose.yml`](https://github.com/bitnami/bitnami-docker-reportserver/blob/master/docker-compose.yml) file present in this repository:
 
-Reportserver brings in demo data that can be autmatically loaded setting the following environment variable:
+    ```yaml
+      reportserver:
+        ...
+        environment:
+          - REPORTSERVER_DATABASE_USER=bn_reportserver
+          - REPORTSERVER_DATABASE_NAME=bitnami_reportserver
+          - ALLOW_EMPTY_PASSWORD=yes
+          - REPORTSERVER_SMTP_HOST=smtp.gmail.com
+          - REPORTSERVER_SMTP_PORT=587
+          - REPORTSERVER_SMTP_USER=your_email@gmail.com
+          - REPORTSERVER_SMTP_PASSWORD=your_password
+      ...
+    ```
 
- - REPORTSERVER_INSTALLDEMODATA=yes
+- For manual execution:
 
-### Setting a passphrase and salt
+    ```console
+    $ docker run -d --name reportserver -p 80:8080 -p 443:8443 \
+      --env REPORTSERVER_DATABASE_USER=bn_reportserver \
+      --env REPORTSERVER_DATABASE_NAME=bitnami_reportserver \
+      --env REPORTSERVER_SMTP_HOST=smtp.gmail.com \
+      --env REPORTSERVER_SMTP_PORT=587 \
+      --env REPORTSERVER_SMTP_USER=your_email@gmail.com \
+      --env REPORTSERVER_SMTP_PASSWORD=your_password \
+      --network reportserver-tier \
+      --volume /path/to/reportserver-persistence:/bitnami \
+      bitnami/reportserver:latest
+    ```
 
-If set, this passphrase and salt are used to generate the passwords of the Reportserver users in the database. If not, they are ramdonly generated.
+##### Connect ReportServer Community container to an existing database
 
- - REPORTSERVER_CRYPTPASSPHRASE="my_passphrase"
- - REPORTSERVER_CRYPTSALT="my_salt" # Maximum 8 characters
+The Bitnami ReportServer Community container supports connecting the ReportServer Community application to an external database. This would be an example of using an external database for ReportServer Community.
 
-### SMTP Configuration
+- Modify the [`docker-compose.yml`](https://github.com/bitnami/bitnami-docker-reportserver/blob/master/docker-compose.yml) file present in this repository:
 
-To configure Reportserver Community to send email using SMTP you can set the following environment variables:
+    ```diff
+       reportserver:
+         ...
+         environment:
+    -      - REPORTSERVER_DATABASE_HOST=mariadb
+    +      - REPORTSERVER_DATABASE_HOST=mariadb_host
+           - REPORTSERVER_DATABASE_PORT_NUMBER=3306
+           - REPORTSERVER_DATABASE_NAME=reportserver_db
+           - REPORTSERVER_DATABASE_USER=reportserver_user
+    -      - ALLOW_EMPTY_PASSWORD=yes
+    +      - REPORTSERVER_DATABASE_PASSWORD=reportserver_password
+         ...
+    ```
 
- - `SMTP_HOST`: SMTP host.
- - `SMTP_PORT`: SMTP port.
- - `SMTP_EMAIL`: SMTP email.
- - `SMTP_USER`: SMTP account user.
- - `SMTP_PASSWORD`: SMTP account password.
- - `SMTP_SSL_ENABLE`: Enable SSL for SMTP.
- - `SMTP_TLS_ENABLE`: Enable TLS for SMTP.
- - `SMTP_TLS_REQUIRED`: TLS is required for SMTP.
+- For manual execution:
 
-This would be an example of SMTP configuration using a GMail account:
+    ```console
+    $ docker run -d --name reportserver\
+      -p 8080:8080 -p 8443:8443 \
+      --network reportserver-network \
+      --env REPORTSERVER_DATABASE_HOST=mariadb_host \
+      --env REPORTSERVER_DATABASE_PORT_NUMBER=3306 \
+      --env REPORTSERVER_DATABASE_NAME=reportserver_db \
+      --env REPORTSERVER_DATABASE_USER=reportserver_user \
+      --env REPORTSERVER_DATABASE_PASSWORD=reportserver_password \
+      --volume reportserver_data:/bitnami/reportserver \
+      bitnami/reportserver:latest
+    ```
 
- * Modify the [`docker-compose.yml`](https://github.com/bitnami/bitnami-docker-reportserver-community/blob/master/docker-compose.yml) file present in this repository:
+In case the database already contains data from a previous ReportServer Community installation, you need to set the variable `REPORTSERVER_SKIP_BOOTSTRAP` to `yes`. Otherwise, the container would execute the installation wizard and could modify the existing data in the database. Note that, when setting `REPORTSERVER_SKIP_BOOTSTRAP` to `yes`, values for environment variables such as `REPORTSERVER_USERNAME`, `REPORTSERVER_PASSWORD` or `REPORTSERVER_EMAIL` will be ignored.
 
+## Logging
 
-```yaml
-reportserver-community:
-  environment:
-    - MARIADB_HOST=mariadb
-    - MARIADB_PORT_NUMBER=3306
-    - REPORTSERVER_DATABASE_USER=bn_reportserver
-    - REPORTSERVER_DATABASE_NAME=bitnami_reportserver
-    - SMTP_HOST=smtp.gmail.com
-    - SMTP_PORT=587
-    - SMTP_EMAIL=your_email@gmail.com
-    - SMTP_USER=your_email@gmail.com
-    - SMTP_PASSWORD=your_password
-```
-
- * For manual execution:
+The Bitnami ReportServer Community Docker image sends the container logs to `stdout`. To view the logs:
 
 ```console
- $ docker run -d -p 80:8080 --name reportserver-community --net=reportserver-tier \
-    -e MARIADB_HOST=mariadb \
-    -e MARIADB_PORT_NUMBER=3306 \
-    -e ALLOW_EMPTY_PASSWORD=yes \
-    -e REPORTSERVER_DATABASE_USER=bn_reportserver \
-    -e REPORTSERVER_DATABASE_NAME=bitnami_reportserver \
-    -e SMTP_HOST=smtp.gmail.com \
-    -e SMTP_PORT=587 \
-    -e SMTP_USER=your_email@gmail.com \
-    -e SMTP_PASSWORD=your_password \
-    bitnami/reportserver-community
+$ docker logs reportserver
+```
+
+Or using Docker Compose:
+
+```console
+$ docker-compose logs reportserver
+```
+
+You can configure the containers [logging driver](https://docs.docker.com/engine/admin/logging/overview/) using the `--log-driver` option if you wish to consume the container logs differently. In the default configuration docker uses the `json-file` driver.
+
+## Maintenance
+
+### Backing up your container
+
+To backup your data, configuration and logs, follow these simple steps:
+
+#### Step 1: Stop the currently running container
+
+```console
+$ docker stop reportserver
+```
+
+Or using Docker Compose:
+
+```console
+$ docker-compose stop reportserver
+```
+
+#### Step 2: Run the backup command
+
+We need to mount two volumes in a container we will use to create the backup: a directory on your host to store the backup in, and the volumes from the container we just stopped so we can access the data.
+
+```console
+$ docker run --rm -v /path/to/reportserver-backups:/backups --volumes-from reportserver busybox \
+  cp -a /bitnami/reportserver /backups/latest
+```
+
+### Restoring a backup
+
+Restoring a backup is as simple as mounting the backup as volumes in the containers.
+
+For the MariaDB database container:
+
+```diff
+ $ docker run -d --name mariadb \
+   ...
+-  --volume /path/to/mariadb-persistence:/bitnami/mariadb \
++  --volume /path/to/mariadb-backups/latest:/bitnami/mariadb \
+   bitnami/mariadb:latest
+```
+
+For the ReportServer Community container:
+
+```diff
+ $ docker run -d --name reportserver \
+   ...
+-  --volume /path/to/reportserver-persistence:/bitnami/reportserver \
++  --volume /path/to/reportserver-backups/latest:/bitnami/reportserver \
+   bitnami/reportserver:latest
+```
+
+### Upgrade this image
+
+Bitnami provides up-to-date versions of MariaDB and ReportServer Community, including security patches, soon after they are made upstream. We recommend that you follow these steps to upgrade your container. We will cover here the upgrade of the ReportServer Community container. For the MariaDB upgrade see: https://github.com/bitnami/bitnami-docker-mariadb/blob/master/README.md#upgrade-this-image
+
+The `bitnami/reportserver:latest` tag always points to the most recent release. To get the most recent release you can simple repull the `latest` tag from the Docker Hub with `docker pull bitnami/reportserver:latest`. However it is recommended to use [tagged versions](https://hub.docker.com/r/bitnami/reportserver/tags/).
+
+#### Step 1: Get the updated image
+
+```console
+$ docker pull bitnami/reportserver:latest
+```
+
+#### Step 2: Stop the running container
+
+Stop the currently running container using the command
+
+```console
+$ docker-compose stop reportserver
+```
+
+#### Step 3: Take a snapshot of the application state
+
+Follow the steps in [Backing up your container](#backing-up-your-container) to take a snapshot of the current application state.
+
+#### Step 4: Remove the currently running container
+
+Remove the currently running container by executing the following command:
+
+```console
+docker-compose rm -v reportserver
+```
+
+#### Step 5: Run the new image
+
+Update the image tag in `docker-compose.yml` and re-create your container with the new image:
+
+```console
+$ docker-compose up -d
 ```
 
 # Learn more about ReportServer Community
@@ -291,29 +443,41 @@ Developers can also access the [API documentation](https://reportserver.net/api/
 
 More information is available from the [ReportServer website](https://reportserver.net/en/).
 
-# Notable Changes
+## Notable Changes
 
-## 3.1.2-6022-debian-10-r23
+### 3.7.0-6044-debian-10-r52
+
+- The size of the container image has been reduced.
+- The configuration logic is now based on Bash scripts in the *rootfs/* folder.
+
+
+### 3.1.2-6022-debian-10-r23
 
 - Java distribution has been migrated from AdoptOpenJDK to OpenJDK Liberica. As part of VMware, we have an agreement with Bell Software to distribute the Liberica distribution of OpenJDK. That way, we can provide support & the latest versions and security releases for Java.
 
-# Contributing
+## Contributing
 
-We'd love for you to contribute to this container. You can request new features by creating an [issue](https://github.com/bitnami/bitnami-docker-reportserver-community/issues), or submit a [pull request](https://github.com/bitnami/bitnami-docker-reportserver-community/pulls) with your contribution.
+We'd love for you to contribute to this container. You can request new features by creating an [issue](https://github.com/bitnami/bitnami-docker-reportserver/issues), or submit a [pull request](https://github.com/bitnami/bitnami-docker-reportserver/pulls) with your contribution.
 
-# Issues
+## Issues
 
-If you encountered a problem running this container, you can file an [issue](https://github.com/bitnami/bitnami-docker-reportserver-community/issues/new). For us to provide better support, be sure to include the following information in your issue:
+If you encountered a problem running this container, you can file an [issue](https://github.com/bitnami/bitnami-docker-reportserver/issues). For us to provide better support, be sure to include the following information in your issue:
 
 - Host OS and version
 - Docker version (`docker version`)
 - Output of `docker info`
-- Version of this container (`echo $BITNAMI_IMAGE_VERSION` inside the container)
+- Version of this container
 - The command you used to run the container, and any relevant output you saw (masking any sensitive information)
 
-# License
+## License
 
-Copyright 2016-2021 Bitnami
+Copyright (c) 2021 Bitnami
+
+Licensed under the Apache License, Version 2.0 (the "License");
+you may not use this file except in compliance with the License.
+You may obtain a copy of the License at
+
+    http://www.apache.org/licenses/LICENSE-2.0
 
 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
